<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GuptShabd</string>

    <string name="guptshabd">गुप्त शब्द</string>
    <string name="kaise_khele">कैसे खेलें ?</string>
    <string name="find_text">छिपे शब्द के मिटे अक्षर खोजिए कीबोर्ड के साथ। </string>
    <string name="paheli_text">हर बार एक नई पहेली </string>
    <string name="a_text">ऐ</string>
    <string name="bha_text">भ</string>
    <string name="l_text">ऌ</string>
    <string name="shabd_text">शब्द अक्षर में नहीं है</string>
    <string name="shabd_text1">अक्षर शब्द में कहीं और है</string>
    <string name="shabd_text2">सही अक्षर</string>
    <string name="continue_text">Continue</string>
    <string name="settings_text">सेटिंग्स</string>
    <string name="version_code">Ver 0.1</string>
    <string name="notification">नोटिफिकेशन</string>
    <string name="feedback">फीडबैक</string>
    <string name="community">कम्युनिटी</string>
    <string name="question_text">प्रशन पूछें</string>
    <string name="email_text">ईमेल</string>
    <string name="faq_text">FAQ</string>
    <string name="leaderboard_text">लीडरबॉर्ड</string>
    <string name="aapka_leaderboard_text">आपका लीडरबॉर्ड</string>
    <string name="time_content_text">05:10</string>
    <string name="shabdam_text">शब्दम</string>
    <string name="koi_baat_nahi_text">कोई बात नही</string>
    <string name="agli_baar_text">आप अगली बार अच्छा करेंगे </string>
    <string name="sahi_jabab_text">सही जवाब </string>
    <string name="agla_shabd_text">अगला शब्द </string>
    <string name="share_text">Share</string>
    <string name="statistics_text">स्टेटिस्टिक्स</string>
    <string name="played_text">Played</string>
    <string name="win_text" tools:ignore="DuplicateDefinition">% Win</string>
    <string name="current_streak_text">Current \n Streak</string>
    <string name="max_streak_text">Max Streak</string>
    <string name="samay_laga_text">समय लगा </string>
    <string name="gas_distribution_text">गेस डिस्ट्रीब्यूशन</string>
    <string name="hint_text">हिंट</string>
    <string name="answer_dekho_text">उत्तर देखो</string>

    // Right Answer Text
    <string name="right_answer">व</string>
    <string name="right_answer1">र्ण</string>
    <string name="right_answer2">मा</string>
    <string name="right_answer3">ला</string>

    // Name
    <string name="name">शिवा</string>
    <string name="name1">शेखर</string>
    <string name="name2">मयंक</string>
    <string name="aap_text">आप</string>
</resources>