<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.LeaderBoardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/radius_background"
        android:elevation="@dimen/_10sdp">

        <ImageView
            android:id="@+id/iv_back_btn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_toRightOf="@id/iv_back_btn"
            android:text="@string/leaderboard_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_share_btn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:src="@drawable/share_icon" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/iv_small_img"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_2sdp"
                android:text="@string/name"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />

            <ImageView
                android:id="@+id/iv_small_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:scaleType="fitXY"
                android:src="@drawable/small_box_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_35sdp"
                android:text="2"
                android:textColor="@color/leaderboard_box_text_color"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/iv_large_img"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_2sdp"
                android:text="@string/name1"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />

            <ImageView
                android:id="@+id/iv_large_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:scaleType="fitXY"
                android:src="@drawable/large_box_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_55sdp"
                android:text="1"
                android:textColor="@color/leaderboard_box_text_color"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/iv_mini_img"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_2sdp"
                android:text="@string/name2"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />

            <ImageView
                android:id="@+id/iv_mini_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:scaleType="fitXY"
                android:src="@drawable/mini_box_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_18sdp"
                android:text="3"
                android:textColor="@color/leaderboard_box_text_color"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/leaderboard_background_radius"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/aapka_leaderboard_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:id="@+id/rv_getLeaderboard_List"/>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/rectangle_radius"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/circle_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="1"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/name1"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/time_content_text"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/rectangle_radius"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/circle_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="2"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/time_content_text"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/rectangle_radius"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/circle_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="3"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/name2"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/time_content_text"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/rectangle_radius"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/circle_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="30"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/aap_text"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/time_content_text"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>-->


    </LinearLayout>

</LinearLayout>